[project]
name = "beijing-subway-navigator"
version = "0.1.0"
description = "A terminal-based navigation system for Beijing Subway, built from scratch using custom Matrix and Graph implementations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty]
